<resources>
    <string name="app_name">GefiMobile</string>
    <string name="entrar">Entrar</string>
    <string name="username">Login</string>
    <string name="senha">Senha</string>


    <string name="ferramentas">Ferramentas</string>
    <string name="requisicao">Requisicao</string>
    <string name="controle">Controle</string>


    <string name="ferramentas_text">Ferramentas text</string>
    <string name="requisicao_text">Requisicao text</string>
    <string name="controle_text">Controle text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Trocar Senha</string>
    <string name="action_user">user</string>
    <string name="action_about">Sobre</string>
    <string name="action_logout">Sair</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="troca_senha">Mudar senha</string>
    <string name="tela_sobre">Sistema Visual de controle de ferramenta e materiais \n desenvolvido pelo laboratório Presidente Altino</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="visualizar">"Visualizar"</string>
    <string name="tratamento">Tratamento</string>
    <string name="senha_antiga">Senha Antiga</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="repetir_senha">Repita a Nova Senha</string>
    <string name="alterar_senha">Alterar</string>
    <string name="tratar_falha">Realizar Tratamento</string>

</resources>