<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_action_menu"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_user"
                android:icon="@drawable/ic_action_user"
                android:title="@string/action_user"
                />

            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings"
                />



            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_action_help"
                android:title="@string/action_about"
                />
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_action_logout"
                android:title="@string/action_logout"
                />


        </menu>
    </item>
</menu>