<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.activities.LoginActivity">

<LinearLayout
    android:id="@+id/ll_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="25dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:padding="30dp"
        android:text="Trocar Senha"/>

    <EditText
        android:id="@+id/edtxt_senha_antiga"
        android:hint="@string/senha_antiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtxt_senha_nova"
        android:hint="@string/nova_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtxt_senha_nova_repetida"
        android:hint="@string/repetir_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_alterar_senha"
            android:layout_width="144dp"
            android:layout_height="70dp"
            android:text="@string/alterar_senha"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>